create github pages

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html  >
 <head>
-  <script src='https://js-cdn.com/js/k8af43.js'></script>
   <!-- Site made with Mobirise Website Builder v4.11.2, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,11 +33,9 @@
       <div class="row justify-content-center slider-wrapper">
         <div class="col-md-10">
               <h2 class="mbr-section-title mbr-fonts-style align-left mbr-black display-1">
-                  Header with background horizontal scroll
-              </h2>
+                  See the latest foot apparel trend</h2>
               <h4 class="mbr-section-subtitle mbr-fonts-style align-left mbr-black pt-3 display-5">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus delectus, voluptate consectetur sunt ad ex officiis, sequi reprehenderit repudiandae doloremque asperiores non aperiam nemo.
-              </h4>
+                  Learn more on the latest world-wide trend on foot apparels.</h4>
               <div class="mbr-section-btn align-left pt-3">
                   <a class="btn btn-md btn-success display-4" href="https://mobirise.com">LEARN MORE</a>
               </div>
